Fixes #18869: Topbar menu is broken on Safari

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-menu.css
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-menu.css
@@ -634,6 +634,9 @@ ul.graph-legend > li.legend:hover{
 
 /* ----- </DASHBOARD>  ----- */
 /* -- <NAVBAR>  ------------ */
+#rudder-navbar {
+  display: flex;
+}
 .skin-yellow .sidebar-menu>li.footer>span{
   padding: 12px 5px 12px 15px;
   display: block;
